feat: add sumarizer on kato-bot for group use cases
